Fixing bug 80083. Making sure window.navigator doesn't get GC'd during the lifetime of a document. r=fabian@bluishgecko.net, sr=vidur@netscape.com