dom/src/base/nsDOMClassInfo.h
@@ -232,6 +232,7 @@ protected:
   static JSString *sOpen_id;
   static JSString *sItem_id;
   static JSString *sEnumerate_id;
+  static JSString *sNavigator_id;
 
 
   static const JSClass *sObjectClass;
